# Secure-Chat-Application

./: .gitignore  Da Plan.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  pyproject.toml
benchmarks/: bench_cpu.py  bench_latency.py  bench_throughput.py
benchmarks/results/: cpu.json  latency.json  throughput.json
docs/: architecture.md  benchmarks.md  ciphers.md
examples/: basic_chat.py  multi_cipher.py
src/securechat/: __init__.py
src/securechat/ciphers/: __init__.py  base.py  caesar.py  columnar.py  hill.py  keys.py  vigenere.py
src/securechat/client/: cli.py  client.py
src/securechat/protocol/: framing.py  handshake.py  message.py
src/securechat/server/: client_handler.py  room.py  server.py
src/securechat/utils/: math_utils.py
tests/: test_caesar.py  test_client.py  test_client_handler.py  test_columnar.py  test_framing.py  test_handshake.py  test_hill.py  test_integration.py  test_math_utils.py  test_registry.py  test_room.py  test_server.py  test_vigenere.py
